fixed align

--- a/app/assets/stylesheets/components/_viewscontainers.scss
+++ b/app/assets/stylesheets/components/_viewscontainers.scss
@@ -7,14 +7,14 @@
 }
 .card-show {
   background: white;
-  padding: 25px 78px;
+  padding: 25px;
   margin-bottom: 5px;
   border-radius: 4px;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
 }
 .card-show-home {
   background: white;
-  padding: 25px 78px;
+  padding: 25px;
   margin-bottom: 5px;
   border-radius: 4px;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
